--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
 </div>
 
 <img
-  src="https://i.pinimg.com/736x/fa/d5/e7/fad5e79954583ad50ccb3f16ee64f66d.jpg"
+  style="border-radius: 20px"
+  src="/img/gojo.webp"
   alt="person looking out through window"
   class="hero-img"
   width="500"
@@ -19,6 +20,11 @@
         ><span>Post Title</span><span class="article-list-data">Date</span></a
       >
     </li>
+    <li>
+      <a href="#"
+        ><span>Post Title</span><span class="article-list-data">Date</span></a
+      >
+    </li>
   </uL>
-  <a href="#" class="paganation">&lt; View Older Posts</a>
+  <a href="#" class="pagination">&lt; View Older Posts</a>
 </section>
