--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="footer">
-  &copy; <%= new Date().getFullYear(); %> Hardik • Build with NodeJs & MongoDB
+  &copy; <%= new Date().getFullYear(); %> Raddy • Built with NodeJs & MongoDB
 </footer>
