--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,9 @@
 <header class="header">
-  <a href="/" class="header_logo">Nodejs</a>
-  <nav class="header_nav">
+  <a href="/" class="header__logo">Nodejs</a>
+  <nav class="header__nav">
     <ul>
       <li><a href="/" class="">Home</a></li>
-    </ul>
-    <ul>
       <li><a href="/about" class="">About</a></li>
-    </ul>
-    <ul>
       <li><a href="/contact" class="">Contact</a></li>
     </ul>
   </nav>
