--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,16 +15,19 @@
 <section class="articles">
   <h2 class="articles__heading">Latest Posts</h2>
   <uL class="article-ul">
+    <% data.forEach(post => { %>
     <li>
-      <a href="#"
-        ><span>Post Title</span><span class="article-list-data">Date</span></a
+      <a href="/post/<%= post._id %>"
+        ><span><%= post.title %></span
+        ><span class="article-list__date"
+          ><%= post.createdAt.toDateString() %></span
+        ></a
       >
     </li>
-    <li>
-      <a href="#"
-        ><span>Post Title</span><span class="article-list-data">Date</span></a
-      >
-    </li>
+    <% }) %>
   </uL>
-  <a href="#" class="pagination">&lt; View Older Posts</a>
+
+  <% if(nextPage !== null) { %>
+  <a href="/?page=<%= nextPage %>" class="pagination">&lt; View Older Posts</a>
+  <% }%>
 </section>
