Added Search feature

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -4,11 +4,11 @@
       <input
         type="search"
         aria-label="search"
-        id="searchinput"
+        id="searchInput"
         name="searchTerm"
         placeholder="Search the site..."
       />
     </form>
-    <div class="searchClose">Close</div>
+    <div id="searchClose">Close</div>
   </div>
 </div>
